Adapt module using its name
Basically, replace "Starter Kit" by "Wicked".

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cockpit-wicked",
+  "name": "wicked",
   "version": "0.1.0",
   "description": "Cockpit user interface for wicked",
   "main": "index.js",
