--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "@patternfly/patternfly": "4.50.4",
     "@patternfly/react-core": "4.63.3",
+    "@patternfly/react-table": "^4.18.14",
     "core-js": "3.6.5",
     "react": "16.13.1",
     "react-dom": "16.13.1"
