Add support for unit testing
Using React Testing Library[1] and Jest[2]

[1] https://testing-library.com/docs/react-testing-library/intro
[2] https://jestjs.io/

--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "watch": "webpack --watch",
     "build": "webpack",
     "eslint": "eslint --ext .js --ext .jsx src/",
-    "eslint:fix": "eslint --fix --ext .js --ext .jsx src/"
+    "eslint:fix": "eslint --fix --ext .js --ext .jsx src/",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --colors"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
     "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "chrome-remote-interface": "^0.28.0",
@@ -28,6 +33,7 @@
     "eslint-loader": "^4.0.2",
     "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.21.2",
@@ -35,6 +41,8 @@
     "eslint-plugin-standard": "^4.0.1",
     "htmlparser": "^1.7.7",
     "jed": "^1.1.1",
+    "jest": "^26.5.3",
+    "jest-transform-stub": "^2.0.0",
     "mini-css-extract-plugin": "^0.11.0",
     "node-sass": "^4.14.1",
     "po2json": "^1.0.0-alpha",
