--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,9 +2,16 @@
     "root": true,
     "env": {
         "browser": true,
-        "es6": true
+        "es6": true,
+        "jest": true
     },
-    "extends": ["eslint:recommended", "standard", "standard-react"],
+    "extends": [
+      "eslint:recommended",
+      "standard",
+      "standard-react",
+      "plugin:jest/recommended",
+      "plugin:jest/style"
+    ],
     "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": "7",
@@ -13,7 +20,7 @@
         },
         "sourceType": "module"
     },
-    "plugins": ["flowtype", "react", "react-hooks"],
+    "plugins": ["flowtype", "react", "react-hooks", "jest"],
     "rules": {
         "indent": ["error", 4,
             {
