--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@patternfly/react-core": "4.63.3",
     "@patternfly/react-table": "^4.18.14",
     "core-js": "3.6.5",
+    "ipaddr.js": "^2.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
