--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "jest-transform-stub": "^2.0.0",
     "jsdoc": "^3.6.6",
     "mini-css-extract-plugin": "^0.11.0",
-    "node-sass": "^4.14.1",
     "po2json": "^1.0.0-alpha",
     "qunit": "^2.9.3",
+    "sass": "^1.22.10",
     "sass-loader": "^10.0.2",
     "sizzle": "^2.3.3",
     "stdio": "^2.1.0",
