--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "mini-css-extract-plugin": "^0.11.0",
     "po2json": "^1.0.0-alpha",
     "qunit": "^2.9.3",
-    "sass": "^1.22.10",
+    "sass": "^1.29.0",
     "sass-loader": "^10.0.2",
     "sizzle": "^2.3.3",
     "stdio": "^2.1.0",
@@ -63,6 +63,7 @@
     "@patternfly/react-core": "4.63.3",
     "@patternfly/react-table": "^4.18.14",
     "core-js": "3.6.5",
+    "deep-equal": "^2.0.4",
     "ipaddr.js": "^2.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
