--- a/cockpit-wicked.spec.in
+++ b/cockpit-wicked.spec.in
@@ -1,26 +1,45 @@
-Name: cockpit-wicked
-Version: %{VERSION}
-Release: 0
-Summary: Cockpit user interface for Wicked
-License: LGPL-2.1-or-later
-URL: https://github.com/openSUSE/cockpit-wicked
-Source: https://github.com/openSUSE/cockpit-wicked/releases/download/%{version}/cockpit-wicked-%{version}.tar.gz
-BuildArch: noarch
+#
+# spec file for package cockpit
+#
+# Copyright (c) 2020 SUSE LLC
+#
+# All modifications and additions to the file contributed by third parties
+# remain the property of their copyright owners, unless otherwise agreed
+# upon. The license for this file, and modifications and additions to the
+# file, is the same license as for the pristine package itself (unless the
+# license for the pristine package is not an Open Source License, in which
+# case the license is the MIT License). An "Open Source License" is a
+# license that conforms to the Open Source Definition (Version 1.9)
+# published by the Open Source Initiative.
+
+# Please submit bugfixes or comments via https://bugs.opensuse.org/
+#
+
+
+Name:           cockpit-wicked
+Version:        %{VERSION}
+Release:        0
+Summary:        Cockpit user interface for Wicked
+License:        LGPL-2.1-or-later
+URL:            https://github.com/openSUSE/cockpit-wicked
+Source:         https://github.com/openSUSE/cockpit-wicked/releases/download/%{version}/cockpit-wicked-%{version}.tar.gz
+BuildArch:      noarch
 BuildRequires:  appstream-glib
 
-Requires: cockpit-system
-Requires: wicked
+Requires:       cockpit-bridge
+Requires:       wicked
 
-BuildRequires: nodejs-devel
-BuildRequires: npm
-
-%define debug_package %{nil}
+BuildRequires:  nodejs-devel
+BuildRequires:  npm
 
 %description
-Cockpit module for managing network configuration through Wicked.
+Cockpit component for managing network configuration through Wicked
 
 %prep
-%setup -n cockpit-wicked
+%setup -q -n %name
+
+%build
+# Nothing to build
 
 %install
 %make_install
@@ -30,6 +49,8 @@ appstream-util validate-relax --nonet %{buildroot}/%{_datadir}/metainfo/*
 find %{buildroot}%{_datadir}/cockpit/ -name '*.map' | xargs rm --verbose
 
 %files
+%doc README.md
+%license LICENSE
 %{_datadir}/cockpit
 %{_datadir}/metainfo/*
 
