Updated the build/test running system

--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "wicked",
   "description": "Cockpit user interface for wicked",
   "main": "index.js",
+  "type": "module",
   "repository": "https://github.com/dgdavid/cockpit-wicked",
   "author": "",
   "license": "GPL-2.0",
   "scripts": {
-    "watch": "webpack --watch",
-    "build": "webpack",
+    "watch": "ESBUILD_WATCH='true' ./build.js",
+    "build": "./build.js",
     "eslint": "eslint --ext .js --ext .jsx src/",
     "eslint:fix": "eslint --fix --ext .js --ext .jsx src/",
     "test": "jest",
