--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,16 +8,13 @@
     "extends": [
       "eslint:recommended",
       "standard",
+      "standard-jsx",
       "standard-react",
       "plugin:jest/recommended",
       "plugin:jest/style"
     ],
-    "parser": "babel-eslint",
     "parserOptions": {
-        "ecmaVersion": "7",
-        "ecmaFeatures": {
-            "jsx": true
-        },
+        "ecmaVersion": "2022",
         "sourceType": "module"
     },
     "plugins": ["flowtype", "react", "react-hooks", "jest"],
