--- a/cockpit-wicked.spec.in
+++ b/cockpit-wicked.spec.in
@@ -22,9 +22,19 @@ Release:        0
 Summary:        Cockpit user interface for Wicked
 License:        GPL-2.0-only
 URL:            https://github.com/openSUSE/cockpit-wicked
-Source:         https://github.com/openSUSE/cockpit-wicked/archive/refs/tags/%{version}.tar.gz#/cockpit-wicked-%{version}.tar.gz
+Source:         %{name}-%{version}.tar.xz
+Source10:       package-lock.json
+Source11:       node_modules.spec.inc
+Source12:       node_modules.sums
+%include %_sourcedir/node_modules.spec.inc
 BuildArch:      noarch
 BuildRequires:  appstream-glib
+BuildRequires:  appstream-glib
+BuildRequires:  cockpit-devel >= 251
+BuildRequires:  local-npm-registry
+BuildRequires:  make
+BuildRequires:  nodejs-devel
+BuildRequires:  npm
 
 Requires:       cockpit-bridge
 Requires:       wicked
@@ -38,17 +48,22 @@ Conflicts:      cockpit-networkmanager
 Cockpit component for managing network configuration through Wicked
 
 %prep
-%setup -q -n %name
+%setup -q -n %{name}-%{version}
+rm -f package-lock.json
+rm -rf node_modules
+local-npm-registry %{_sourcedir} install --with=dev || ( find ~/.npm/_logs -name '*-debug.log' -print0 | xargs -0 cat; false)
 
 %build
-# Nothing to build
+mkdir -p pkg
+cp -r %{_datadir}/cockpit/devel/lib pkg/lib
+NODE_ENV=production npm run build
 
 %install
-%make_install
+PREFIX=/usr DESTDIR=%{buildroot} make install
 appstream-util validate-relax --nonet %{buildroot}/%{_datadir}/metainfo/*
 
 # drop source maps, they are large and just for debugging
-find %{buildroot}%{_datadir}/cockpit/ -name '*.map' | xargs rm --verbose
+find %{buildroot}%{_datadir}/cockpit/ -name '*.map' | xargs --no-run-if-empty rm --verbose
 
 %files
 %doc README.md
