--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
+    "@babel/eslint-parser": "^7.24.1",
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.2.2",
-    "babel-eslint": "^10.0.3",
     "babel-loader": "^9.1.3",
     "chrome-remote-interface": "^0.33.0",
     "css-loader": "^6.8.1",
